# sqlean-stubs

./: .gitignore  AGENTS.md  README.md  build.sh  pyproject.toml  release.py  release.sh  setup.py  tox.ini
.github/: BRANCH_PROTECTION.md  PUBLISHING.md
.github/workflows/: publish.yml  tests.yml
sqlean/: __init__.pyi  dbapi2.pyi  extensions.pyi
tests/: __init__.py  test_mypy.py  test_types.py
